# hyperGCN_v4

./: .gitignore
exp/: ExpResults_20241011.xlsx  FinalSummary_20250102.xlsx  Sim_20240827.xlsx  Sim_20241026.xlsx  Sim_20241213.xlsx  Sim_20241223.xlsx  Summary.xlsx  gowalla_exp.xlsx  origLightGCN_performance_onLastFM_20241003.xlsx
exp/lambda_gpu/20241029/: hyperGCN_cuda_2002_gowalla_1024__1_101_knn_all_losses.npy  hyperGCN_cuda_2002_gowalla_1024__1_101_knn_all_metrics.npy  hyperGCN_cuda_2002_gowalla_1024__1_121_knn_all_losses.npy  hyperGCN_cuda_2002_gowalla_1024__1_121_knn_all_metrics.npy  hyperGCN_cuda_2002_yelp2018_1024__1_321_knn_all_losses.npy  lightGCN_cuda_2002_gowalla_1024__1_1001_bi_all_losses.npy  (+6 more)
exp/old_useless/: Sim_20240827.xlsx  Sim_20240907.xlsx
notes/: DesignSteps  ToDo_20240908  ToDo_20241003  ToDo_20241004
paper/: ContentDraft
ppt/: HyperGCN_20240830 2.pptx  HyperGCN_20240830.pptx  HyperGCN_20240909 copy.pptx  HyperGCN_20240909.pptx  HyperGCN_20241118.pptx  HyperGCN_20250202.pptx  ~$HyperGCN_20241118.pptx
src/: README.md  data_prep.py  dataset_analysis.py  demo_2.ipynb  demo_rec.ipynb  f_sim.py  feature_sim.py  i_sim.py  main.py  model.py  parse.py  plot_res.py  procedure.py  requirements.txt  similarity_func.py  test.py  utils.py  world.py
src/rust_utils/: Cargo.toml  pyproject.toml
src/rust_utils/src/: lib.rs
src/tests/: cosine_test.py  edge_drop.py  gen_sim_adj_list.py  hyperbolic.py  rust_test.py  similarity_func.py  test.py  testCaseDefinition.xlsx  test_batch_loader.py  test_edge_index.py  test_make_neg_adj_list.py  test_metrics.py
(+42 files in other folders)
